<resources>
    <string name="app_name">Book Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_master">Book Master</string>
    <string name="profile">Profile</string>
    <string name="discovery">Discovery</string>
    <string name="book_case">Book Case</string>
    <string name="welcome_book_master">Welcome Book Master</string>
    <string name="fiction">Fiction</string>
    <string name="category">Category:</string>
    <string name="nita_prose">Nita Prose</string>
    <string name="author">Author:</string>
    <string name="the_maid">The Maid</string>
    <string name="your_web_client_id">1056822241936-kgjc857q1142d1h5c60lh7gpolgg7a5f.apps.googleusercontent.com</string>
    <string name="stripe_publishable_key">sk_test_51PBwbkGLkrLd9UE1w8kOHxC4Y7CQzurmb2SZc2Qty5VRiJXrLsFC8FAkyUeLrJGlreAxUx1eems5SbEg1o4InPAh00XcpotEhS</string>
    <string name="introduction">Introduction</string>
    <string name="molly_introduction">Molly Gray is not like everyone else. She struggles with social skills and misreads the intentions of others</string>
</resources>