<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_book_case"
        android:title="@string/book_case"
        android:icon="@drawable/tusach"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/fragment_home"
        />
    <item android:id="@+id/nav_discover"
        android:title="@string/discovery"
        android:icon="@drawable/khampha"
        app:showAsAction="always"
        android:actionLayout="@layout/fragment_home"/>
    <item android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="always"
        android:actionLayout="@layout/fragment_home"/>

</menu>