<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="140dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="140dp"
            app:cardCornerRadius="10dp">
            <ImageView
                android:id="@+id/img_book"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/book22" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textStyle="bold"
                android:fontFamily="@font/lato_bold"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/the_maid" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tv_name_writer"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textColor="#00695C"
                    android:ellipsize="end"
                    android:fontFamily="@font/lato_bold"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:text="@string/nita_prose" />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="120dp"
                    android:layout_height="20dp"
                    android:textColor="#00695C"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:fontFamily="@font/lato_bold"
                    android:textSize="15sp"
                    android:text="@string/fiction" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
